# DefinabilityTheory_Z3_lib

./: CMakeLists.txt  LICENSE  README.md  example.cpp  lib_init.cpp  lib_init.hpp
Automorphism/: Automorphism.cpp  Automorphism.hpp
Checkers/: checkers.cpp  checkers.hpp
Error/: Error.cpp  Error.hpp
Generators/: generate.cpp  generate.hpp
Grid/: Grid.hpp  GridFunction.cpp  GridFunction.hpp
Grid/IntVec/: IntVec.cpp  IntVec.hpp
GridAutomorphism/: GridAutomorphism.cpp  GridAutomorphism.hpp
GridLib/: GridLib.cpp  GridLib.hpp
GridRelation/: GridRelation.cpp  GridRelation.hpp
Relation/: Relation.cpp  Relation.hpp
